--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     if (/Mobi|Android/i.test(navigator.userAgent)) {
       let meta = document.createElement('meta')
       meta.name = "viewport"
-      meta.content = "width=device-width, initial-scale=1, minimum-scale=0.1, maximum-scale=5, user-scalable=yes"
+      // set an initial-scale low enough so that even large ascii outputs are visible
+      meta.content = "width=device-width, initial-scale=0.5, minimum-scale=0.1, maximum-scale=5, user-scalable=yes"
       document.getElementsByTagName('head')[0].appendChild(meta)
     }
   </script>
@@ -41,14 +42,14 @@
     input:hover {
       background: #005599;
     }
+    /* The pre element will be scaled so that the entire ascii art is visible */
     pre {
       white-space: pre;
-      font-size: 1em;
-      line-height: 1em;
+      font-size: 16px;
+      line-height: 16px;
       margin: 0;
       padding: 1em;
-      width: 90%;
-      overflow-x: auto;
+      transform-origin: top left;
     }
     #progressContainer {
       width: 80%;
@@ -105,6 +106,24 @@
     const progressBar = document.getElementById('progressBar')
     const progressMessage = document.getElementById('progressMessage')
 
+    // After ascii art is generated, scale the <pre> element so it fits the viewport
+    function scaleAscii(detail, asciiOutput) {
+      // approximate character dimensions (in pixels)
+      const charWidth = 10
+      const charHeight = 16
+      // ascii art width in pixels is detail columns * charWidth
+      let artWidth = detail * charWidth
+      // ascii art height is the number of lines * charHeight
+      let lines = asciiOutput.split('\n')
+      let artHeight = lines.length * charHeight
+      // Compute scale factors for width and height
+      let scaleX = window.innerWidth / artWidth
+      let scaleY = window.innerHeight / artHeight
+      let scale = Math.min(scaleX, scaleY, 1)
+      // Apply the scale transform to the pre element
+      display.style.transform = 'scale(' + scale + ')'
+    }
+
     // converts the custom media to ascii using the specified detail size.
     // The canvas width is set to the detail size (which determines the number of characters per line)
     // and the canvas height is computed from the media's aspect ratio.
@@ -134,6 +153,8 @@
       }
       // Display the ascii art exactly left-to-right, line-by-line
       display.textContent = output
+      // scale the ascii output to fit the viewport without scrolling
+      scaleAscii(detail, output)
       if (custommediatype === 'video') {
         requestAnimationFrame(customrender)
       }
@@ -209,4 +230,4 @@
     })
   </script>
 </body>
-</html>
+  </html>
